--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
     username: root
     password: abc123
   redis:
-    host: localhost
+    host: 192.168.46.123
     port: 6379
     password: abc123
     lettuce:
